issue #221 Phase 0 step 3a: KVM hello world (NOP×3+HLT を実 vCPU で実行) (#240)